# YandereCrawler

./: .clang-format  .gitignore  CMakeLists.txt  Downloader.cpp  Downloader.h  README.md  UserInterface.cpp  UserInterface.h  WebParser.cpp  WebParser.h  YandereCrawler.cpp  YandereCrawler.h
docs/: uml.mdj
src/: Application.cpp  Application.h  Config.cpp  Config.h  ConfigReader.cpp  ConfigReader.h  Downloader.cpp  Downloader.h  FileDownloader.cpp  FileDownloader.h  ImageLinkExtracter.cpp  ImageLinkExtracter.h  LinkParser.cpp  LinkParser.h  LinksGenerator.cpp  LinksGenerator.h  MultiFileDownloader.cpp  MultiFileDownloader.h  NavigationParser.cpp  NavigationParser.h  PageAmountExtracter.cpp  PageAmountExtracter.h  PageDownloader.cpp  PageDownloader.h  PageLinkGenerator.cpp  PageLinkGenerator.h  Tool.cpp  Tool.h  WebParser.cpp  WebParser.h  main.cpp
